@@ -3,3 +3,9 @@
 This is a game I created in java, using Greenfoot IDE. This is a typing game, you need to type the word that shows up on the screen, backspace if you made a mistake. 
 
 Everytime you type a word correctly, the player will shot a bullet at the closest zombie. The game ends when you type incorrect 10 times, or a zombie reaches the player.
+
+After downloading the .jar file you can run it using this command 
+
+"C:\Program Files\Greenfoot\jdk\bin\java.exe" -cp "C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\zoumi\Documents\GitHub\Greenfoot-Typing-Game\Typing-Game.jar" --module-path "C:\Program Files\Greenfoot\lib\javafx\lib" --add-modules=ALL-MODULE-PATH greenfoot.export.GreenfootScenarioApplication
+
+More information can be found here: https://www.greenfoot.org/doc/run_standalone
